# Watchdog_Brand

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  apply-schema-override.json  buildspec-worker.yml  buildspec.yml  config.yaml  coordinator-taskdef.json  docker-compose.yml  pyproject.toml  run-cycle-override.json
brand_watchdog/: __init__.py  add_sites.py  cli.py  config.py  main.py  migrate.py  worker.py
brand_watchdog/alerts/: __init__.py  alert_service.py  compliance_email_notifier.py  email_providers.py
brand_watchdog/analyzer/: __init__.py  analyzer.py  bedrock_client.py  compliance_analyzer.py  compliance_exceptions.py  compliance_prompt_builder.py  compliance_report_parser.py  reference_image_cache.py
brand_watchdog/coordinator/: __init__.py  coordinator.py  cycle_consolidator.py
brand_watchdog/crawler/: __init__.py  crawler.py
brand_watchdog/events/: __init__.py  models.py  publisher.py  (+1 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_BRAND_WATCHDOG.md
infra/: README.md  cloudformation.yml  deploy.ps1  deploy.sh  destroy.ps1  destroy.sh  override-add-site.json  override-add-text.json  override-list-sites.json  override-migrate-brand.json  override-migrate-match-type.json  override-run-cycle.json  worker-infrastructure.yml
infrastructure/: README.md  auto_scaling.json  ecs_task_definition.json  s3_lifecycle.json  sqs_config.json
migrations/: env.py
scripts/: buscar_websites_isps.py
tests/: conftest.py
watchdog_rules/: Comercializadores DGO y Amazon Prime - Websites.xlsx  Comercializadores DGO y Amazon Prime.xlsx
(+123 files in other folders)
