[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-watchdog"
version = "0.1.0"
description = "Sistema de monitoramento automatizado de uso não autorizado de marca em websites"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "playwright>=1.40.0",
    "boto3>=1.34.0",
    "apscheduler>=3.10.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: testes baseados em propriedades (Hypothesis)",
    "integration: testes de integração",
]

[tool.coverage.run]
source = ["brand_watchdog"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
